--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <header class="header"><h1>Crystal Collector!!</h1></header>
+    <header class="header"><h1>Crystal Collector</h1></header>
 
     <main>
 
